highlight/pygment readability fix using courier

--- a/_scss/components/_syntax.scss
+++ b/_scss/components/_syntax.scss
@@ -15,9 +15,10 @@
 }
 
 code {
-  font-family: 'Droid Sans Mono', monospace;
-  font-size: 0.95em;
-  line-height: 1.4;
+  font-family: 'Courier New', monospace;
+  font-weight: bold;
+  font-size: 0.9em;
+  line-height: 1.3;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
